random quote machine task completed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
     <h1>My Random Machine</h1>
-    <div class="quote">  
+    <div id="quoteId" class="quote">  
     </div>
-    <button id="btn" onclick="myQuotes">click me</button>
+    <button id="btn" onclick="myQuotes()">click me</button>
     </div>
 </body>
 </html>
